syntax = "proto3";

package uppick.auction;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.oneog.uppick.proto.auction";
option java_outer_classname = "AuctionProto";

message RegisterAuctionRequest {
	// 상품 ID
	int64 product_id = 1;
	// 최소 입찰가
	int64 min_price = 2;
	// 등록 시각
	google.protobuf.Timestamp registered_at = 3;
	// 종료 시각
	google.protobuf.Timestamp end_at = 4;
}

service AuctionService {
	// registerAuction(Long productId, Long minPrice, LocalDateTime registerdAt, LocalDateTime endAt)
	rpc RegisterAuction(RegisterAuctionRequest) returns (google.protobuf.Empty);
}